HLT-2866 Fixed situation heading to sit outside of white box and fixed "You're looking to" line to use form_v3 (to align correctly)

--- a/src/main/webapp/bundles/health_v2/less/journeyEngineOverrides.less
+++ b/src/main/webapp/bundles/health_v2/less/journeyEngineOverrides.less
@@ -232,3 +232,12 @@ body[data-step="apply"], body[data-step="payment"] {
 .popover {
 	.qtip-variant(@qtip-health-popover-border, @qtip-default-border-radius, @qtip-health-popover-background-color, @qtip-health-popover-background-color, @qtip-default-padding-title, @qtip-default-padding-content, @qtip-health-popover-text-color, @qtip-health-popover-text-color);
 }
+
+fieldset.health-about-you-title {
+	.content {
+		padding:0px;
+		background: transparent;
+		border:none;
+		box-shadow:none;
+	}
+}
